--- a/index.html
+++ b/index.html
@@ -5,8 +5,105 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NCC Test</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/app.css" />
   </head>
+  <style>
+    .hamburger {
+      display: block;
+      width: 40px;
+      height: 40px;
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 999;
+      cursor: pointer;
+    }
+
+    .line {
+      display: block;
+      width: 100%;
+      height: 3px;
+      background-color: #000;
+      margin-bottom: 5px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .sidebar {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      left: -100%;
+      background-color: #000;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .sidebar.active {
+      left: 0;
+    }
+
+    .sidebar .menu {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .sidebar .menu li {
+      border-bottom: 1px solid #ccc;
+    }
+
+    .sidebar .menu li a {
+      display: block;
+      padding: 10px;
+      font-size: 18px;
+      color: #ccc;
+      text-decoration: none;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .sidebar .menu li a:hover {
+      background-color: #fff;
+      color: #000;
+    }
+
+    @media (min-width: 768px) {
+      .sidebar {
+        width: 250px;
+        left: 0;
+      }
+
+      .sidebar .menu li a {
+        font-size: 22px;
+        padding: 15px;
+      }
+
+      .hamburger {
+        display: none;
+      }
+    }
+  </style>
   <body>
-    A
+    <button class="hamburger">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+    </button>
+    <div class="sidebar">
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
