--- a/index.html
+++ b/index.html
@@ -11,27 +11,38 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/app.css" />
+    <!-- <link rel="stylesheet" href="./css/app.css" /> -->
   </head>
   <style>
     .hamburger {
+      position: relative;
       display: block;
-      width: 40px;
-      height: 40px;
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 999;
       cursor: pointer;
+      padding: 5px;
+      border: none;
+      background: transparent;
+      float: right;
+      text-align: center;
+      z-index: 20;
     }
 
-    .line {
+    .hamburger span {
       display: block;
-      width: 100%;
+      width: 25px;
       height: 3px;
-      background-color: #000;
       margin-bottom: 5px;
-      transition: all 0.3s ease-in-out;
+      position: relative;
+      background: #333;
+      border-radius: 3px;
+      z-index: 10;
+    }
+
+    .hamburger span:before,
+    .hamburger span:after {
+      content: "";
+      position: absolute;
+      background: inherit;
+      border-radius: inherit;
     }
 
     .sidebar {
@@ -39,8 +50,8 @@
       height: 100%;
       position: fixed;
       top: 0;
-      left: -100%;
-      background-color: #000;
+      right: 100%;
+      background-color: #191718;
       transition: all 0.3s ease-in-out;
     }
 
@@ -62,7 +73,7 @@
       display: block;
       padding: 10px;
       font-size: 18px;
-      color: #ccc;
+      color: #aaaaaa;
       text-decoration: none;
       transition: all 0.3s ease-in-out;
     }
@@ -72,9 +83,13 @@
       color: #000;
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
+      .feature-item {
+        width: 100%;
+      }
+
       .sidebar {
-        width: 250px;
+        width: 140px;
         left: 0;
       }
 
@@ -87,12 +102,64 @@
         display: none;
       }
     }
+    .container {
+      max-width: 1170px;
+      margin: 0 auto;
+      padding: 0 15px;
+      /* transform: translateX(70px); */
+    }
+
+    .logo {
+      width: 270px;
+      height: auto;
+    }
+    .banner {
+      background-color: #efefef;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 30px;
+      padding: 50px 0;
+      margin: 40px 0;
+      color: #0b0b0b;
+    }
+    .banner-title {
+      font-weight: 600;
+      font-size: 15px;
+    }
+    .banner-desc {
+      max-width: 600px;
+      text-align: center;
+      line-height: 1.4;
+    }
+    .logo-header {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
+    .feature-list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-column-gap: 20px;
+    }
+
+    .feature-content img {
+      width: 100px;
+      height: 100px;
+      object-fit: center;
+      display: inline;
+      margin-right: 20px;
+      float: left;
+    }
+    hr {
+      margin-bottom: 40px;
+    }
   </style>
   <body>
     <button class="hamburger">
-      <span class="line"></span>
-      <span class="line"></span>
-      <span class="line"></span>
+      <span></span>
+      <span></span>
+      <span></span>
     </button>
     <div class="sidebar">
       <ul class="menu">
@@ -104,6 +171,82 @@
       </ul>
     </div>
 
+    <div class="container">
+      <div class="logo-header">
+        <img src="./image/logo.png" alt="logo" class="logo" />
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="banner">
+        <h5 class="banner-title">Lorem ipsum dolor sit amet?</h5>
+        <p class="banner-desc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+          consequatur similique quidem sed, rem aperiam, quod pariatur sint
+          explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+          sequi expedita vitae explicabo esse omnis distinctio, sit nulla
+          Corrupti magnam facere sequi expedita vitae sequi expedita vitae
+          explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+          sequi expedita vitae.
+        </p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="feature-list">
+        <div class="feature-item">
+          <h4 class="feature-title">Lorem ipsum dolor sit amet</h4>
+          <div class="feature-content">
+            <img src="./image/css-image.png" alt="css" />
+            <p class="feature-title">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              consequatur similique quidem sed, rem aperiam, quod pariatur sint
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae explicabo esse omnis distinctio, sit nulla
+              Corrupti magnam facere sequi expedita vitae sequi expedita vitae
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae.
+            </p>
+          </div>
+        </div>
+
+        <div class="feature-item">
+          <h4 class="feature-title">Lorem ipsum dolor sit amet</h4>
+          <div class="feature-content">
+            <img src="./image/html-image.png" alt="html" />
+            <p class="feature-title">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              consequatur similique quidem sed, rem aperiam, quod pariatur sint
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae explicabo esse omnis distinctio, sit nulla
+              Corrupti magnam facere sequi expedita vitae sequi expedita vitae
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae.
+            </p>
+          </div>
+        </div>
+
+        <div class="feature-item">
+          <h4 class="feature-title">Lorem ipsum dolor sit amet</h4>
+          <div class="feature-content">
+            <img src="./image/url-image.png" alt="url" />
+            <p class="feature-title">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              consequatur similique quidem sed, rem aperiam, quod pariatur sint
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae explicabo esse omnis distinctio, sit nulla
+              Corrupti magnam facere sequi expedita vitae sequi expedita vitae
+              explicabo esse omnis distinctio, sit nulla. Corrupti magnam facere
+              sequi expedita vitae.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr />
+    <div class="container">
+      <span>Copyright @2021</span>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
